--- a/index.html
+++ b/index.html
@@ -208,19 +208,19 @@
           <!-- Card Container -->
           <div class="inline-flex gap-12">
             <!-- Card 1 -->
-            <div class="hover:scale-105 duration-700 ease-in-out">
+            <div class="hover:scale-105 duration-300 ease-in-out hover:drop-shadow-md">
               <img class="rounded-xl" src="images/plant-1.png" alt="" />
               <p class="text-lg font-medium mt-3 mb-2">Natural Plants</p>
               <p class="text-colorSecondary text-lg font-medium">₱ 1,400.00</p>
             </div>
             <!-- Card 2 -->
-            <div class="hover:scale-105 duration-700 ease-in-out">
+            <div class="hover:scale-105 duration-300 ease-in-out hover:drop-shadow-md">
               <img class="rounded-xl" src="images/plant-2.png" alt="" />
               <p class="text-lg font-medium mt-3 mb-2">Artificial Plants</p>
               <p class="text-colorSecondary text-lg font-medium">₱ 900.00</p>
             </div>
             <!-- Card 3 -->
-            <div class="hover:scale-105 duration-700 ease-in-out">
+            <div class="hover:scale-105 duration-300 ease-in-out hover:drop-shadow-md">
               <img class="rounded-xl" src="images/plant-3.png" alt="" />
               <p class="text-lg font-medium mt-3 mb-2">Artificial Plants</p>
               <p class="text-colorSecondary text-lg font-medium">₱ 3,500.00</p>
@@ -303,13 +303,13 @@
             <!-- card container -->
             <div class="text-center">
               <!-- card 1 -->
-              <div class="absolute -top-12 left-[5%] 2xl:left-[12%]">
+              <div class="absolute -top-12 left-[5%] 2xl:left-[12%] hover:scale-105 duration-500 hover:drop-shadow-md ease-in-out">
                 <img src="images/plant-4.png" alt="" />
                 <h3 class="text-lg font-bold mt-3">Natural Plants</h3>
               </div>
 
               <!-- Card middle -->
-              <div class="absolute top-12 left-[37.5%] 2xl:left-[40%]">
+              <div class="absolute top-12 left-[37.5%] 2xl:left-[40%] hover:scale-105 duration-500 hover:drop-shadow-md ease-in-out">
                 <img src="images/plant-5.png" alt="" />
                 <h3 class="text-lg font-bold mt-3">Plant Accessories</h3>
                 <p
@@ -323,7 +323,7 @@
               </div>
 
               <!-- card 3 -->
-              <div class="absolute -top-12 right-[5%] 2xl:right-[12%]">
+              <div class="absolute -top-12 right-[5%] 2xl:right-[12%] hover:scale-105 duration-500 hover:drop-shadow-md ease-in-out">
                 <img src="images/plant-6.png" alt="" />
                 <h3 class="text-lg font-bold mt-3">Artificial Plants</h3>
               </div>
@@ -352,10 +352,9 @@
                 style="flex: 0 0 auto"
               >
                 <p class="text-lg font-medium text-colorTartiary">
-                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  vulputate libero et velit interdum, ac aliquet odio mattis.
-                  Class aptent taciti sociosqu ad litora torquent per conubia
-                  nostra, per inceptos himenaeos.
+                  GREENMIND has transformed my home with their beautiful plants.
+                  The quality is unmatched, and the customer service is
+                  fantastic!
                 </p>
                 <img
                   class="absolute bottom-[101px] left-[48px]"
@@ -369,16 +368,18 @@
                 />
                 <!-- designation -->
                 <div class="absolute bottom-[102px] left-[170px]">
-                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <h2 class="text-colorPrimary text-lg font-bold">
+                    James Smith
+                  </h2>
                   <small class="text-colorSecondary text-xs font-medium"
-                    >Youtuber</small
+                    >Plant Enthusiast</small
                   >
                 </div>
                 <!-- rating -->
                 <div
                   class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
                 >
-                  <i class="fa-solid fa-star"></i> 4.5
+                  <i class="fa-solid fa-star"></i> 4.9
                 </div>
               </div>
               <!-- card 2 -->
@@ -387,10 +388,9 @@
                 style="flex: 0 0 auto"
               >
                 <p class="text-lg font-medium text-colorTartiary">
-                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  vulputate libero et velit interdum, ac aliquet odio mattis.
-                  Class aptent taciti sociosqu ad litora torquent per conubia
-                  nostra, per inceptos himenaeos.
+                  I've purchased both natural and artificial plants from
+                  GREENMIND, and I'm impressed with the variety and quality.
+                  Highly recommend!
                 </p>
                 <img
                   class="absolute bottom-[101px] left-[48px]"
@@ -404,9 +404,9 @@
                 />
                 <!-- designation -->
                 <div class="absolute bottom-[102px] left-[170px]">
-                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <h2 class="text-colorPrimary text-lg font-bold">Jane</h2>
                   <small class="text-colorSecondary text-xs font-medium"
-                    >Youtuber</small
+                    >Home Decor Blogger</small
                   >
                 </div>
                 <!-- rating -->
@@ -422,10 +422,9 @@
                 style="flex: 0 0 auto"
               >
                 <p class="text-lg font-medium text-colorTartiary">
-                  Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                  vulputate libero et velit interdum, ac aliquet odio mattis.
-                  Class aptent taciti sociosqu ad litora torquent per conubia
-                  nostra, per inceptos himenaeos.
+                  The fast delivery and excellent customer service made my
+                  experience with GREENMIND amazing. My plants arrived healthy
+                  and vibrant!
                 </p>
                 <img
                   class="absolute bottom-[101px] left-[48px]"
@@ -439,16 +438,18 @@
                 />
                 <!-- designation -->
                 <div class="absolute bottom-[102px] left-[170px]">
-                  <h2 class="text-colorPrimary text-lg font-bold">John Doe</h2>
+                  <h2 class="text-colorPrimary text-lg font-bold">
+                    Mark Johnson
+                  </h2>
                   <small class="text-colorSecondary text-xs font-medium"
-                    >Youtuber</small
+                    >Interior Designer</small
                   >
                 </div>
                 <!-- rating -->
                 <div
                   class="absolute right-12 bottom-[120px] text-colorPrimary text-lg font-bold"
                 >
-                  <i class="fa-solid fa-star"></i> 4.5
+                  <i class="fa-solid fa-star"></i> 4.7
                 </div>
               </div>
               <!-- card 4 -->
@@ -502,7 +503,7 @@
             <h3 class="font-Quella text-black font-normal text-lg">
               GREENMIND
             </h3>
-            <p class="text-lg text-colorSecondary font-medium my-6">
+            <p class="text-lg text-colorSecondary font-medium my-5">
               We help you find your dream plant
             </p>
             <!-- socials  try: grid-flow-col -->
